increase contrast on icons hover (from mdbook-catppuccin v3.1.0) 🐈‍⬛

--- a/scss/catppuccin/frappe.scss
+++ b/scss/catppuccin/frappe.scss
@@ -9,7 +9,7 @@
   --sidebar-spacer: #737994;
   --scrollbar: #737994;
   --icons: #737994;
-  --icons-hover: #838ba7;
+  --icons-hover: #949cbb;
   --links: #8caaee;
   --inline-code-color: #ef9f76;
   --theme-popup-bg: #292c3c;
