--- a/scss/catppuccin/latte.scss
+++ b/scss/catppuccin/latte.scss
@@ -9,7 +9,7 @@
   --sidebar-spacer: #9ca0b0;
   --scrollbar: #9ca0b0;
   --icons: #9ca0b0;
-  --icons-hover: #8c8fa1;
+  --icons-hover: #7c7f93;
   --links: #1e66f5;
   --inline-code-color: #fe640b;
   --theme-popup-bg: #e6e9ef;
