--- a/scss/catppuccin/macchiato.scss
+++ b/scss/catppuccin/macchiato.scss
@@ -9,7 +9,7 @@
   --sidebar-spacer: #6e738d;
   --scrollbar: #6e738d;
   --icons: #6e738d;
-  --icons-hover: #8087a2;
+  --icons-hover: #939ab7;
   --links: #8aadf4;
   --inline-code-color: #f5a97f;
   --theme-popup-bg: #1e2030;
