--- a/scss/catppuccin/mocha.scss
+++ b/scss/catppuccin/mocha.scss
@@ -9,7 +9,7 @@
   --sidebar-spacer: #6c7086;
   --scrollbar: #6c7086;
   --icons: #6c7086;
-  --icons-hover: #7f849c;
+  --icons-hover: #9399b2;
   --links: #89b4fa;
   --inline-code-color: #fab387;
   --theme-popup-bg: #181825;
