--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -56,7 +56,7 @@
               aria-controls="results-header" aria-describedby="results-header">
 
             <div id="results-header"></div>
-            <ul id="searchresults" aria-live="polite" role="status"></ul>
+            <ul id="searchresults" role="listbox" aria-multiselectable="false" aria-orientation="vertical"></ul>
           </div>
         </div>
 
