fix: Found a sectioned `h1` element with no specified font-size or `margin` properties 🪄
More information: https://developer.mozilla.org/docs/Web/HTML/Element/Heading_Elements#specify_font-size_and_margin-block_on_h1

--- a/scss/_headline.scss
+++ b/scss/_headline.scss
@@ -8,6 +8,7 @@
   font-family: var.$italic-font;
   font-style: italic;
 
+  margin: 1.2rem 0rem;
   scroll-margin-top: var.$menu-bar-height;
 
   &:target {
