--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -17,6 +17,7 @@
 
 .righttoc {
   column-gap: 2rem;
+  z-index: 10;
 
   &>#pagetoc {
     display: flex;
@@ -73,6 +74,7 @@
   border-top: 0.1em solid var.$color-pink;
   width: 100dvw;
   padding: 0.24em 0;
+  z-index: 30;
 
   background-color: var(--bg);
 
