Adopt a glassy design 🍸

--- a/scss/_presentation.scss
+++ b/scss/_presentation.scss
@@ -1,3 +1,4 @@
+@use 'mixins' as mixin;
 @use 'variables' as var;
 
 pre {
@@ -72,8 +73,7 @@ mark {
   top: var.$menu-bar-height;
 
   color: var(--fg);
-  background-color: var(--theme-popup-bg);
-  border: 0.1rem solid var(--theme-popup-border);
+  @include mixin.glassy-mask(var(--theme-popup-bg));
 }
 
 .table-wrapper {
