Visual Effects Adjustment

--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -70,14 +70,14 @@
 
 .bottomtoc {
   position: fixed;
-  bottom: 0.24rem;
+  bottom: 0;
 
   border-top: 0.1em solid var.$color-pink;
   width: 100dvw;
   padding: 0.24rem 0;
   z-index: 30;
 
-  @include mixin.glass-filter();
+  @include mixin.glass-filter($radius: 0.4rem);
 
   ::-webkit-scrollbar {
     height: var.$scrollbar-webkit-height;
