--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,16 +1,17 @@
 @use "sass:math";
 @use 'variables' as var;
 
-@mixin glass-filter($blur: 24px, $saturate: 1.4, $brightness: 1.1, $distort-scale: 15, $bg-alpha: 0.24, $radius: 1rem) {
+@mixin glass-filter($blur: 4px, $saturate: 1.4, $brightness: 1.0, $overlay-alpha: 0.16, $base-alpha: 0.4, $radius: 1rem) {
   overflow: hidden;
   border-radius: $radius;
-  box-shadow: 0 16px 32px -8px rgba(255,56,128,0.2);
+  box-shadow: 0 16px 32px -8px rgba(var(--theme-popup-border-rgb), 0.2);
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
 
   &::before {
     content: '';
     position: absolute;
     inset: 0;
-    background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.3), transparent);
+    background: radial-gradient(ellipse at top left, rgba(var(--theme-popup-bg-rgb), $overlay-alpha), transparent);
     z-index: 10;
     pointer-events: none;
   }
@@ -20,7 +21,7 @@
     position: absolute;
     inset: 0;
     backdrop-filter: blur($blur) saturate($saturate) brightness($brightness);
-    background: rgba(255, 255, 255, $bg-alpha);
+    background: rgba(var(--theme-popup-bg-rgb), $base-alpha);
     z-index: 1;
   }
 
