--- a/scss/catppuccin/latte.scss
+++ b/scss/catppuccin/latte.scss
@@ -1,4 +1,10 @@
+@use "popup-vars" as popup;
+
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
+
+$theme-popup-bg: #e6e9ef;
+$theme-popup-border: #9ca0b0;
+
 :root {
   --bg: #eff1f5;
   --fg: #4c4f69;
@@ -12,8 +18,7 @@
   --icons-hover: #7c7f93;
   --links: #1e66f5;
   --inline-code-color: #fe640b;
-  --theme-popup-bg: #e6e9ef;
-  --theme-popup-border: #9ca0b0;
+  @include popup.define-popup-vars($theme-popup-bg, $theme-popup-border);
   --theme-hover: #ccd0da;
   --quote-bg: #e6e9ef;
   --quote-border: #dce0e8;
@@ -30,6 +35,7 @@
   --search-mark-bg: #fe640b;
   --warning-border: #fe640b;
   --color-scheme: light;
+
 }
 
 .hljs-keyword {
