--- a/scss/catppuccin/mocha.scss
+++ b/scss/catppuccin/mocha.scss
@@ -1,4 +1,10 @@
+@use "popup-vars" as popup;
+
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
+
+$theme-popup-bg: #181825;
+$theme-popup-border: #6c7086;
+
 :root {
   --bg: #1e1e2e;
   --fg: #cdd6f4;
@@ -12,8 +18,7 @@
   --icons-hover: #9399b2;
   --links: #89b4fa;
   --inline-code-color: #fab387;
-  --theme-popup-bg: #181825;
-  --theme-popup-border: #6c7086;
+  @include popup.define-popup-vars($theme-popup-bg, $theme-popup-border);
   --theme-hover: #313244;
   --quote-bg: #181825;
   --quote-border: #11111b;
