Adjust pop behavior

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -73,7 +73,7 @@
 
     <div id="page">
       <aside id="sidebar" aria-label="Site map"></aside>
-      <main>
+      <main id="main">
         <article id="article">
           {{{ content }}}
 
