--- a/scss/general.scss
+++ b/scss/general.scss
@@ -2,6 +2,7 @@
 @use 'headline';
 
 @use 'variables' as var;
+@use 'mixins' as mixins;
 
 @view-transition {
   navigation: auto;
@@ -102,7 +103,7 @@ body {
   }
 
   &.show-sidebar {
-    grid-template-columns: var.$sidebar-width 1fr;
+    grid-template-columns: 1fr;
 
     @media (min-width: var.$mobile-max-width) {
       grid-template-columns: var.$sidebar-width 1fr var.$pagetoc-width;
@@ -122,12 +123,17 @@ body {
     border-radius: 1rem;
   }
 
-  // The initial state should be block/none, depending on the screen area.
-  //
-  // This initial value is not necessarily accurate.
-  // (As it does not address the case where a user jumps in with the sidebar closed in a large area.)
   @media (max-width: var.$mobile-max-width) {
-    display: none;
+    position: fixed;
+
+    top: var.$menu-bar-height;
+    bottom: 0;
+
+    left: 0.1rem;
+    width: var.$sidebar-width;
+    z-index: 50;
+
+    @include mixins.glass-filter();
   }
 }
 
