--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,8 +1,8 @@
-$mobile-max-width: 680px;
+$breakpoint-ui-wide: 800px;
 
-$sidebar-width: 13.6rem;
+$sidebar-width: 16rem;
 $pagetoc-width: 12rem;
-$pagetoc-bottom-shift: 3em;
+$pagetoc-bottom-shift: 2.4rem;
 
 $scrollbar-webkit-width: 0.5rem;
 $scrollbar-webkit-height: 0.26rem;
