Changed to specify some transparencies with `hls`. 🥃

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,16 +3,16 @@
 
 @mixin glass-filter($blur: 3px, $saturate: 1.8, $brightness: 1.04, $overlay-alpha: 0.08, $base-alpha: 0.5, $radius: 0.4rem) {
   overflow: hidden;
-  border: 1px solid rgba(var(--theme-popup-border-rgb), 0.8);
+  border: 2px solid hsl(var(--theme-popup-border-h), var(--theme-popup-border-s), var(--theme-popup-border-l), 0.8);
   border-radius: $radius;
-  box-shadow: 0 16px 32px -8px rgba(var(--theme-popup-border-rgb), 0.2);
-  text-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 16px 32px -8px hsl(var(--theme-popup-border-h), var(--theme-popup-border-s), var(--theme-popup-border-l), 0.2);
+  text-shadow: 1px 1px 4em var(--bg);
 
   &::before {
     content: '';
     position: absolute;
     inset: 0;
-    background: radial-gradient(ellipse at top left, rgba(var(--theme-popup-bg-rgb), $overlay-alpha), transparent);
+    background: radial-gradient(ellipse at top left, hsl(var(--theme-popup-bg-h), var(--theme-popup-bg-s), var(--theme-popup-bg-l), $overlay-alpha), transparent);
     z-index: 10;
     pointer-events: none;
   }
@@ -22,7 +22,7 @@
     position: absolute;
     inset: 0;
     backdrop-filter: blur($blur) saturate($saturate) brightness($brightness);
-    background: rgba(var(--theme-popup-bg-rgb), $base-alpha);
+    background: hsl(var(--theme-popup-bg-h), var(--theme-popup-bg-s), var(--theme-popup-bg-l), $base-alpha);
     z-index: 1;
   }
 
@@ -33,7 +33,7 @@
 }
 
 /*
- * When I try to type on my iPhone, it zooms in on itself and does not release this zoom when I finish typing.
+ * When I try to type on iPhone, it zooms in on itself and does not release this zoom when I finish typing.
  * This site considers this behavior undesirable, so we have cheated the system.
  *
  * note: iOS automatically zooms when input elements have a font size smaller than 16px.
