--- a/scss/catppuccin/macchiato.scss
+++ b/scss/catppuccin/macchiato.scss
@@ -1,9 +1,11 @@
-@use "popup-vars" as popup;
+@use "../color-channnels.scss" as cc;
 
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
 
-$theme-popup-bg: #1e2030;
-$theme-popup-border: #6e738d;
+$popup-colors: (
+  "theme-popup-bg": #1e2030,
+  "theme-popup-border": #6e738d
+);
 
 :root {
   --bg: #24273a;
@@ -18,7 +20,6 @@ $theme-popup-border: #6e738d;
   --icons-hover: #939ab7;
   --links: #8aadf4;
   --inline-code-color: #f5a97f;
-  @include popup.define-popup-vars($theme-popup-bg, $theme-popup-border);
   --theme-hover: #363a4f;
   --quote-bg: #1e2030;
   --quote-border: #181926;
@@ -35,6 +36,8 @@ $theme-popup-border: #6e738d;
   --search-mark-bg: #f5a97f;
   --warning-border: #f5a97f;
   --color-scheme: dark;
+
+  @include cc.convert-hsl($popup-colors, -8%);
 }
 
 .hljs-keyword {
