--- a/scss/catppuccin/mocha.scss
+++ b/scss/catppuccin/mocha.scss
@@ -1,9 +1,11 @@
-@use "popup-vars" as popup;
+@use "../color-channnels.scss" as cc;
 
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
 
-$theme-popup-bg: #181825;
-$theme-popup-border: #6c7086;
+$popup-colors: (
+  "theme-popup-bg": #181825,
+  "theme-popup-border": #6c7086
+);
 
 :root {
   --bg: #1e1e2e;
@@ -18,7 +20,6 @@ $theme-popup-border: #6c7086;
   --icons-hover: #9399b2;
   --links: #89b4fa;
   --inline-code-color: #fab387;
-  @include popup.define-popup-vars($theme-popup-bg, $theme-popup-border);
   --theme-hover: #313244;
   --quote-bg: #181825;
   --quote-border: #11111b;
@@ -35,6 +36,8 @@ $theme-popup-border: #6c7086;
   --search-mark-bg: #fab387;
   --warning-border: #fab387;
   --color-scheme: dark;
+
+  @include cc.convert-hsl($popup-colors, -16%);
 }
 
 .hljs-keyword {
