--- a/scss/catppuccin/au-lait.scss
+++ b/scss/catppuccin/au-lait.scss
@@ -1,4 +1,4 @@
-@use "../color-channnels.scss" as cc;
+@use "../utils" as utils;
 
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
 
@@ -37,7 +37,7 @@ $popup-colors: (
   --warning-border: #fe640b;
   --color-scheme: light;
 
-  @include cc.convert-hsl($popup-colors, 10%);
+  @include utils.convert-hsl($popup-colors, 10%);
 }
 
 .hljs-keyword {
