--- a/scss/catppuccin/macchiato.scss
+++ b/scss/catppuccin/macchiato.scss
@@ -1,4 +1,4 @@
-@use "../color-channnels.scss" as cc;
+@use "../utils" as utils;
 
 /* https://highlightjs.readthedocs.io/en/latest/css-classes-reference.html */
 
@@ -37,7 +37,7 @@ $popup-colors: (
   --warning-border: #f5a97f;
   --color-scheme: dark;
 
-  @include cc.convert-hsl($popup-colors, -8%);
+  @include utils.convert-hsl($popup-colors, -8%);
 }
 
 .hljs-keyword {
