fix: Video player stops unnaturally due to page scrolling 📼
If you scroll the page during video playback and then return to the display position again, the video will stop.

And while we're at it, let's get the code straight.

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -30,13 +30,15 @@
 
     #indicators {
       display: flex;
-      gap: 0.5rem;
+      gap: 0.7rem;
 
       span {
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
+        width: 9px;
+        height: 9px;
         background: var(--sidebar-spacer);
+        border-radius: 50%;
+        cursor: pointer;
+        user-select: none;
 
         &.active {
           background: var(--sidebar-active);
