--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -2,6 +2,7 @@
   display: grid;
   justify-items: center;
   overflow: hidden;
+  gap: 0.2em;
 
   .media {
     display: flex;
@@ -22,8 +23,9 @@
     .arrow {
       background: hsl(var(--theme-popup-border-h), var(--theme-popup-border-s), var(--theme-popup-border-l), 0.4);
       color: var(--fg);
-      border-radius: 1rem;
-      padding: 0.5rem;
+      border-radius: 0.8rem;
+      padding: 0.4rem;
+
       cursor: pointer;
       user-select: none;
     }
@@ -31,17 +33,27 @@
     #indicators {
       display: flex;
       gap: 0.7rem;
+      overflow-y: visible;
 
-      span {
-        width: 9px;
-        height: 9px;
-        background: var(--sidebar-spacer);
-        border-radius: 50%;
+      button {
+        width: 2.4em;
+        height: 2.4em;
+
+        background-size: cover;
+        background-position: center;
+        border: none;
+        border-radius: 0.8em;
+
         cursor: pointer;
         user-select: none;
 
         &.active {
-          background: var(--sidebar-active);
+          outline: 2px solid var(--sidebar-active);
+        }
+
+        &:hover {
+          transform: scale(1.1);
+          transition: transform 0.2s;
         }
       }
     }
