--- a/scss/_table-of-contents.scss
+++ b/scss/_table-of-contents.scss
@@ -16,6 +16,22 @@
   }
 }
 
+.toc-container {
+  display: flex;
+  right: 0;
+  position: fixed;
+
+  z-index: 30;
+
+  @media (max-width: var.$breakpoint-ui-wide) {
+    right: .6rem;
+    bottom: .6rem;
+    overflow: hidden;
+
+    @include utils.filter-glass($radius: 1.6rem);
+  }
+}
+
 .righttoc {
   column-gap: 2rem;
   z-index: 10;
@@ -24,8 +40,7 @@
     display: flex;
     flex-direction: column;
 
-    position: fixed;
-    min-width: var.$pagetoc-width;
+    width: var.$pagetoc-width;
 
     overflow-y: scroll;
 
@@ -69,18 +84,7 @@
 }
 
 .bottomtoc {
-  position: fixed;
-  bottom: 0;
-
-  width: 100dvw;
-  padding: 0.24rem 0;
-  z-index: 30;
-
-  @include utils.filter-glass($radius: 0.4rem);
-
-  & {
-    border-top: 1px solid var.$color-pink; // Overwrite only the top of the border
-  }
+  width: 80dvw;
 
   ::-webkit-scrollbar {
     height: var.$scrollbar-webkit-height;
@@ -114,6 +118,14 @@
       @include anchor-gradient(to top);
     }
   }
+}
+
+#toc-toggle {
+  width: 2.4rem;
+  height: 2.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @media (min-width: var.$breakpoint-ui-wide) {
     display: none;
