--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,4 @@
-$breakpoint-ui-wide: 800px;
+$breakpoint-ui-wide: 1025px;
 
 $sidebar-width: 16rem;
 $pagetoc-width: 12rem;
@@ -13,8 +13,8 @@ $base-font: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, Ubuntu, 
 $mono-font: 'Fira Code', monospace;
 $italic-font: 'Open Sans', sans-serif;
 
-$base-font-size: 0.875rem;
-$code-font-size: 0.725rem;
+$base-font-size: 14px;
+$code-font-size: 12px;
 
 $color-pink: #ffb2cc;
 $color-purple: #dcb7f1;
